--- a/resources/contenttweaker/lang/zh_cn.lang
+++ b/resources/contenttweaker/lang/zh_cn.lang
@@ -20,3 +20,5 @@ item.contenttweaker.rlmusic_blight.name=§5枯萎
 item.record.rlmusic_blight.desc=Shivaxi - 枯萎
 item.contenttweaker.rlmusic_bliss.name=§d幸福
 item.record.rlmusic_bliss.desc=Shivaxi - 幸福
+item.contenttweaker.coin_pile.name=硬币堆
+item.contenttweaker.coin_pile.desc=§6一大堆硬币！
