--- a/resources/enhancedvisuals/lang/zh_cn.lang
+++ b/resources/enhancedvisuals/lang/zh_cn.lang
@@ -7,7 +7,7 @@ enhancedvisuals.deathmessage.5=没错,这很糟糕...
 enhancedvisuals.deathmessage.6=愤怒来袭!
 enhancedvisuals.deathmessage.7=我觉得你掉了点什么。
 enhancedvisuals.deathmessage.8=是时候休息一下了?
-enhancedvisuals.deathmessage.9=RLCraft真是个婊子,对吧?
+enhancedvisuals.deathmessage.9=RLCraft Dregora 真是个婊子,对吧?
 enhancedvisuals.deathmessage.10=你英勇的行为将被铭记。
 enhancedvisuals.deathmessage.11=去对Shivaxi大吼一顿吧...我保证你会感觉好些。
 enhancedvisuals.deathmessage.12=变强吧。
@@ -46,3 +46,8 @@ enhancedvisuals.deathmessage.44=只是一个非常喜欢搞破坏的鬼怪。
 enhancedvisuals.deathmessage.45=比Mojang修复bug快2年。
 enhancedvisuals.deathmessage.46=情感伤害!
 enhancedvisuals.deathmessage.47=NULL错误 - 找不到讽刺的死亡信息
+enhancedvisuals.deathmessage.48=All for Eagle's, Shiv's and Heaven's amusement!
+enhancedvisuals.deathmessage.49=都怪 Shivaxi! - Eagle & Heaven -
+enhancedvisuals.deathmessage.50=你刚刚被嘘了;)
+enhancedvisuals.deathmessage.51=你确定这不是 Mentalberian 吗？
+enhancedvisuals.deathmessage.52=技能问题！
