--- a/resources/lycanitesmobs/lang/zh_cn.lang
+++ b/resources/lycanitesmobs/lang/zh_cn.lang
@@ -109,3 +109,71 @@ entity.fireball=火球
 boss.block.protection.place=强大的力量阻止你放置这个方块。
 boss.block.protection.break=强大的力量阻止你破坏那个方块。
 boss.damage.protection.range=那个生物太强大,无法从这个距离伤害它。
+#
+entity.lycanitesmobs:ember.name=炽焰
+entity.lycanitesmobs:whirlwind.name=旋风
+entity.lycanitesmobs:lightball.name=光球
+entity.lycanitesmobs:mudshot.name=泥弹
+entity.lycanitesmobs:crystalshard.name=水晶碎片
+entity.lycanitesmobs:magma.name=岩浆
+entity.lycanitesmobs:frostbolt.name=冰霜箭
+entity.lycanitesmobs:tundra.name=冰原
+entity.lycanitesmobs:spectralbolt.name=灵魂箭
+entity.lycanitesmobs:venomshot.name=毒药箭
+entity.lycanitesmobs:boulderblast.name=巨石爆炸
+entity.lycanitesmobs:icefireball.name=冰火球
+entity.lycanitesmobs:hellfireball.name=地狱火球
+entity.lycanitesmobs:quill.name=羽毛
+entity.lycanitesmobs:scorchfireball.name=灼烧火球
+entity.lycanitesmobs:throwingscythe.name=投掷镰刀
+entity.lycanitesmobs:tricksterflare.name=恶作剧者火光
+entity.lycanitesmobs:demonicblast.name=恶魔爆炸
+entity.lycanitesmobs:demonicspark.name=恶魔火花
+entity.lycanitesmobs:bloodleech.name=血吸虫
+entity.lycanitesmobs:acidsplash.name=酸液飞溅
+entity.lycanitesmobs:acidglob.name=酸球
+entity.lycanitesmobs:lobdarklings.name=暗影小怪
+entity.lycanitesmobs:faebolt.name=妖精箭
+entity.lycanitesmobs:frostweb.name=冰霜网
+entity.lycanitesmobs:chaosorb.name=混沌之球
+entity.lycanitesmobs:poisonray.name=毒之光束
+entity.lycanitesmobs:ember.name=炽焰
+entity.lycanitesmobs:blizzard.name=暴风雪
+entity.lycanitesmobs:doomfireball.name=毁灭火球
+entity.lycanitesmobs:waterjet.name=水流喷射
+entity.lycanitesmobs:poop.name=粪便
+entity.lycanitesmobs:lifedrain.name=生命吸取
+entity.lycanitesmobs:devilstar.name=恶魔之星
+entity.lycanitesmobs:aquapulse.name=水之脉动
+entity.lycanitesmobs:arcanelaserstorm.name=奥术激光风暴
+entity.lycanitesmobs:aetherwave.name=以太波
+entity.lycanitesmobs:summoningseed.name=召唤种子
+entity.lycanitesmobs:primeember.name=主要炽焰
+entity.lycanitesmobs:smitefireball.name=重击火球
+#
+#========== 流体 ==========
+#
+tile.moglava.name=魔岩
+tile.moglava.description=§a比普通岩浆更清澈，流动稍快，里面不会生成生物。可像水一样再生。
+#
+tile.ooze.name=粘液
+tile.ooze.description=§a一种冰冷的胶状物质，导致减速、饥饿并造成持续低伤害。
+#
+tile.rabbitooze.name=兔粘液
+tile.rabbitooze.description=§a同普通粘液一样冷且危险，但这里不会生成生物，并且可以像水一样再生。
+#
+tile.poison.name=毒药
+tile.poison.description=§a一种恶臭的液体，导致瘟疫。
+#
+tile.acid.name=酸
+tile.acid.description=§a一种致命物质，导致渗透并造成持续伤害。
+#
+tile.sharacid.name=精炼酸
+tile.sharacid.description=§a精炼过的酸，同样致命，但这里不会生成生物，并且可以像水一样再生。
+#
+tile.vesspoison.name=毒液
+tile.vesspoison.description=§a同普通毒药一样恶臭，但这里不会生成生物，并且可以像水一样再生。
+#
+tile.veshoney.name=蜜蜂蜜
+tile.veshoney.description=§a在蜜蜂巢中形成和发现的一种美味、粘稠且健康的液体，导致减速。
+#
