--- a/resources/switchbow/lang/zh_cn.lang
+++ b/resources/switchbow/lang/zh_cn.lang
@@ -1,3 +1,44 @@
 enchantment.switchbow.pullspeed.desc=提高切换弓的拉弓速度。
 enchantment.switchbow.activescope.desc=360...瞄准镜?
 enchantment.switchbow.cooldownreduce.desc=降低切换弩的冷却时间。
+
+## Added by KameiB
+# Arrow entities
+entity.ArrowLightningBolt.name=雷电箭
+entity.ArrowTNT.name=TNT箭
+entity.ArrowFrost.name=冰霜箭
+entity.ArrowAir.name=气流箭
+entity.ArrowEnderperle.name=传送箭
+entity.ArrowVampier.name=吸血鬼箭
+entity.ArrowWither.name=凋零箭
+entity.ArrowTorch.name=火把箭
+entity.ArrowSplit.name=碎片箭
+entity.ArrowUnderwater.name=水下箭
+entity.ArrowDiamond.name=强化箭
+entity.ArrowLove.name=爱之箭
+entity.ArrowFire.name=火焰箭
+entity.ArrowBone.name=骨头箭
+entity.ArrowFirework.name=火箭箭
+entity.ArrowSplitLove.name=爱之箭(范围)
+entity.ArrowLuck.name=幸运箭
+entity.ArrowRedstone.name=红石箭
+entity.ArrowBurial.name=埋葬箭
+entity.ArrowChorus.name=紫颂果箭
+entity.ArrowSprinkler.name=喷洒箭
+entity.ArrowDragonBreath.name=龙息箭
+entity.ArrowTriple.name=三重箭
+entity.ArrowProtector.name=护卫箭
+entity.ArrowKnockback.name=击退箭
+entity.ArrowBouncy.name=弹跳箭
+entity.ArrowoftheSearcher.name=搜寻者之箭
+entity.ArrowPiercing.name=穿透箭
+entity.LittleIronGolem.name=小型铁傀儡
+
+entity.ArrowLightningBoltStorm.name=雷暴箭
+entity.ArrowBoneAOE.name=骨头箭(范围)
+entity.ArrowSplitUpgrade.name=变形碎片箭
+entity.ArrowBurialAOE.name=埋葬箭(范围)
+entity.ArrowFireUpgrade.name=火焰风暴箭
+entity.ArrowLuckUpgrade.name=变形幸运箭
+entity.ArrowAirUpgrade.name=气流箭(范围)
+entity.ArrowSplitLoveUpgrade.name=变形爱之箭(范围)
